# my_kafka_py

./: current_issues.md  docker-compose.yaml  docker-compose.yml  dvdrental.tar  insert.py  main.py  producer.py  pyproject.toml  read.py  readme.md
