[tool.poetry]
name = "sample-project"
version = "0.1.0"
description = ""
authors = ["koad7 <kodjo.adanledji@gmail.com>"]
readme = "README.md"
packages = [{include = "sample_project"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
